# Quiltis

./: CMakeLists.txt  CMakeSettings.json  README.md  quiltis.cpp  quiltis.hpp
app/: CMakeLists.txt  main.cpp
